<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context="com.pedalpower.test.history">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/AverageTimeLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/average_time"
            app:layout_constraintBottom_toTopOf="@+id/AverageTimeOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/AverageTimeOutput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_average_time_to_show_yet"
            app:layout_constraintBottom_toTopOf="@+id/AveragePowerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AverageTimeLabel" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/AveragePowerLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/average_power"
            app:layout_constraintBottom_toTopOf="@+id/AveragePowerOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AverageTimeOutput" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/AveragePowerOutput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_average_power_to_show_yet"
            app:layout_constraintBottom_toTopOf="@+id/LastTimeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AveragePowerLabel" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/LastTimeLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/last_time"
            app:layout_constraintBottom_toTopOf="@+id/LastTimeOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AveragePowerOutput" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/LastTimeOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_average_time_to_show_yet"
        app:layout_constraintBottom_toTopOf="@+id/LastAveragePower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastTimeLabel" />
    <TextView
        android:textStyle="bold"
        android:id="@+id/LastAveragePower"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/last_average_power"
        app:layout_constraintBottom_toTopOf="@+id/LastAveragePowerOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastTimeOutput" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/LastAveragePowerOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_average_power_to_show_yet"
        app:layout_constraintTop_toBottomOf="@+id/LastAveragePower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
